H1 tag added around the first line of text

--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
     <title>Hello</title>
 </head>
 <body>
-    Hello, World! [Date:20-12-2021] 
+    <h1>Hello, World! [Date:20-12-2021]</h1>
     <footer>
         Development by Kasi.S
     </footer>
